--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 ---
 layout: home
+title: About me
 author_profile: true
 ---
+<p> Currently I am a PhD Candidate at the University of Manchester under the supervision of Dr Christos Kotselidis. My research is mostly focused on JIT compilation of Java programs for OpenCL compatible devices, and more specificalily for FPGAs. My PhD is fully funded by the <a href="https://e2data.eu/">E2Data</a> project and <a href="http://www.manchester.ac.uk">The University of Manchester</a> </p>
